working on debuging now